add: add web UI

--- a/assets/web/index.html
+++ b/assets/web/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <h1>Welcome to QuickVoice!</h1>
+    <h2>Click the button below to start chatting with your personal AI assistant...</h2>
     <div class="grid">
-		<h1><i class="fa-solid fa-microphone"></i> Voice Recognition</h1>
-		<button id="start-btn">Start</button>
-		<button id="stop-btn">Stop</button>
+		<button id="start-btn">Start / Stop</button>
 		<div id="result-div"></div>
 	</div>
 </body>
