--- a/assets/web/index.html
+++ b/assets/web/index.html
@@ -12,6 +12,7 @@
     <div class="grid">
 		<button id="start-btn">Start / Stop</button>
 		<div id="result-div"></div>
+        <div id="gpt-result"></div>
 	</div>
 </body>
 <script src="https://kit.fontawesome.com/3c77f20f48.js" crossorigin="anonymous"></script>
